# downspout

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  exercise-sidecar-ai.sh  install.sh
plugins/basilico/: CMakeLists.txt  README.md
plugins/basilico/docs/: porting.md
plugins/basilico/include/: basilico_engine.hpp  basilico_params.hpp
plugins/basilico/src/: basilico_engine.cpp
plugins/basilico/src/dpf/: BasilicoPlugin.cpp  BasilicoUI.cpp  DistrhoPluginInfo.h
plugins/basilico/tests/: basilico_core_tests.cpp
plugins/bassgen/: CMakeLists.txt  README.md
plugins/bassgen/docs/: porting.md
plugins/bassgen/include/: bassgen_core_types.hpp  bassgen_engine.hpp
plugins/bassgen/src/: bassgen_engine.cpp  bassgen_pattern.cpp  bassgen_serialization.cpp
plugins/bassgen/src/dpf/: BassgenPlugin.cpp  BassgenUI.cpp  DistrhoPluginInfo.h
plugins/bassgen/tests/: bassgen_core_tests.cpp
plugins/cadence/: CMakeLists.txt  README.md
plugins/cadence/docs/: porting.md
plugins/cadence/include/: cadence_ai_state.hpp  cadence_core_types.hpp  cadence_engine.hpp
plugins/cadence/src/: cadence_ai_state.cpp  cadence_engine.cpp  cadence_harmony.cpp  cadence_serialization.cpp  cadence_variation.cpp
plugins/cadence/src/dpf/: CadencePlugin.cpp  CadenceUI.cpp
plugins/cadence/tests/: cadence_core_tests.cpp
plugins/counterpointer/: CMakeLists.txt  README.md
plugins/counterpointer/docs/: design.md
plugins/counterpointer/include/: counterpointer_core_types.hpp  counterpointer_engine.hpp  counterpointer_serialization.hpp  counterpointer_transport.hpp
plugins/counterpointer/src/: counterpointer_engine.cpp  counterpointer_serialization.cpp  counterpointer_transport.cpp
plugins/counterpointer/src/dpf/: CounterpointerPlugin.cpp  CounterpointerUI.cpp  DistrhoPluginInfo.h
plugins/counterpointer/tests/: counterpointer_core_tests.cpp
plugins/drumgen/: CMakeLists.txt  README.md
plugins/drumgen/docs/: porting.md
plugins/drumgen/include/: drumgen_core_types.hpp
plugins/drumgen/src/: drumgen_pattern.cpp
plugins/drumgen/src/dpf/: DistrhoPluginInfo.h  DrumgenPlugin.cpp  DrumgenUI.cpp
plugins/drumgen/tests/: drumgen_core_tests.cpp
plugins/e-mix/: CMakeLists.txt
plugins/e-mix/src/dpf/: EMixPlugin.cpp
plugins/floozy/: CMakeLists.txt  README.md
plugins/floozy/docs/: audit.md  porting-plan.md  porting.md
plugins/floozy/include/: floozy_engine.hpp  floozy_params.hpp
plugins/floozy/src/: floozy_engine.cpp
plugins/floozy/src/dpf/: DistrhoPluginInfo.h  FloozyPlugin.cpp  FloozyUI.cpp
plugins/floozy/tests/: floozy_core_tests.cpp
plugins/gremlin/: CMakeLists.txt  README.md
plugins/gremlin-driver/: CMakeLists.txt  README.md
plugins/gremlin-driver/docs/: porting.md
plugins/gremlin-driver/include/: GremlinDriverEngine.hpp  gremlin_driver_dpf_shared.hpp  gremlin_driver_params.hpp  gremlin_driver_processor.hpp
plugins/gremlin-driver/src/: gremlin_driver_processor.cpp
plugins/gremlin-driver/src/dpf/: GremlinDriverPlugin.cpp  GremlinDriverUI.cpp
plugins/gremlin-driver/tests/: gremlin_driver_core_tests.cpp
plugins/gremlin/docs/: audit.md  extraction-plan.md  porting.md  reaper-midimix.md
plugins/gremlin/include/: GremlinEngine.hpp  gremlin_params.hpp  gremlin_processor.hpp
plugins/gremlin/src/: gremlin_processor.cpp
plugins/gremlin/src/dpf/: DistrhoPluginInfo.h  GremlinPlugin.cpp  GremlinUI.cpp
plugins/gremlin/tests/: gremlin_core_tests.cpp
plugins/ground/: CMakeLists.txt  README.md
plugins/ground/include/: ground_ai_state.hpp  ground_core_types.hpp  ground_params.hpp
plugins/ground/src/: ground_ai_state.cpp  ground_pattern.cpp  ground_serialization.cpp
plugins/ground/src/dpf/: GroundPlugin.cpp  GroundUI.cpp
plugins/ground/tests/: ground_core_tests.cpp
plugins/lifeform/: CMakeLists.txt  README.md
plugins/lifeform/docs/: design.md
plugins/lifeform/include/: lifeform_params.hpp  lifeform_processor.hpp
plugins/lifeform/src/: lifeform_processor.cpp
plugins/lifeform/src/dpf/: DistrhoPluginInfo.h  (+2 more)
plugins/lifeform/tests/: lifeform_core_tests.cpp
plugins/luma/: CMakeLists.txt  README.md
plugins/luma/docs/: design.md
plugins/luma/include/: luma_params.hpp  luma_processor.hpp
plugins/luma/src/: luma_processor.cpp
plugins/luma/tests/: luma_core_tests.cpp
plugins/m-mix/: CMakeLists.txt  README.md
plugins/m-mix/docs/: porting.md
plugins/m-mix/include/: m_mix_core_types.hpp  m_mix_engine.hpp  m_mix_serialization.hpp
plugins/m-mix/src/: m_mix_engine.cpp  m_mix_serialization.cpp
plugins/m-mix/tests/: m_mix_core_tests.cpp
plugins/melgen/: CMakeLists.txt  README.md
plugins/melgen/docs/: audit.md  extraction-plan.md  porting.md
plugins/melgen/include/: melgen_core_types.hpp  melgen_engine.hpp  melgen_pattern.hpp  melgen_rng.hpp  melgen_serialization.hpp  melgen_state.hpp  melgen_transport.hpp  melgen_variation.hpp
plugins/melgen/src/: melgen_engine.cpp  melgen_pattern.cpp  melgen_serialization.cpp  melgen_state.cpp  melgen_transport.cpp  melgen_variation.cpp
plugins/melgen/tests/: melgen_core_tests.cpp
plugins/p-mix/: CMakeLists.txt
plugins/paunchlad/: CMakeLists.txt  README.md
plugins/paunchlad/docs/: design.md
plugins/paunchlad/include/: paunchlad_params.hpp  paunchlad_processor.hpp
plugins/paunchlad/src/: paunchlad_processor.cpp
plugins/paunchlad/tests/: paunchlad_core_tests.cpp
plugins/rift/: CMakeLists.txt
plugins/sidecar/: CMakeLists.txt  README.md
plugins/sidecar/include/: sidecar_core_types.hpp  sidecar_engine.hpp  sidecar_protocol.hpp  sidecar_serialization.hpp
plugins/sidecar/src/: sidecar_engine.cpp  sidecar_protocol.cpp  sidecar_serialization.cpp
plugins/sidecar/tests/: sidecar_core_tests.cpp
tools/ai-coordinator/: CMakeLists.txt  README.md
tools/ai-coordinator/examples/: response.json  state.json
tools/ai-coordinator/include/: ai_coordinator.hpp
tools/ai-coordinator/src/: live_server.cpp  main.cpp  midi_context.cpp  midi_file_writer.cpp  openai_client.cpp  phrase_response.cpp  request_builder.cpp  solo_generator.cpp  state_json.cpp
tools/ai-coordinator/tests/: ai_coordinator_tests.cpp
(+138 files in other folders)
